--- a/user-service-dev.yml
+++ b/user-service-dev.yml
@@ -1,9 +1,20 @@
+server:
+  port: 8081
+
 spring:
+  application:
+    name: user-service
+
   datasource:
-    url: jdbc:mariadb://localhost:3306/user_db
-    username: user
-    password: password
+    url: jdbc:mariadb://192.168.5.61:3306/userdb
+    driver-class-name: org.mariadb.jdbc.Driver
+    username: root
+    password: 1111
+
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
