--- a/user-service-dev.yml
+++ b/user-service-dev.yml
@@ -18,3 +18,8 @@ spring:
     properties:
       hibernate:
         format_sql: true
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
